Correction mobile et tablette 2

--- a/themes/agen/assets/scss/_common.scss
+++ b/themes/agen/assets/scss/_common.scss
@@ -356,6 +356,9 @@ textarea.form-control {
 /* page-title */
 .page-title {
   padding: 150px 0 120px;
+  @include tablet {
+    padding: 150px 0 70px;
+  }
 }
 
 /* /page-title */
